--- a/hdi_sale/views/sale_order_views.xml
+++ b/hdi_sale/views/sale_order_views.xml
@@ -163,4 +163,19 @@
       </p>
     </field>
   </record>
+
+  <!-- Action: Shipping Services -->
+  <record id="action_shipping_service" model="ir.actions.act_window">
+    <field name="name">Dịch vụ vận chuyển</field>
+    <field name="res_model">shipping.service</field>
+    <field name="view_mode">list,form</field>
+    <field name="help" type="html">
+      <p class="o_view_nocontent_smiling_face">
+        Quản lý dịch vụ vận chuyển
+      </p>
+      <p>
+        Tạo và quản lý các dịch vụ vận chuyển có sẵn
+      </p>
+    </field>
+  </record>
 </odoo>
