--- a/hdi_sale/views/menu.xml
+++ b/hdi_sale/views/menu.xml
@@ -21,7 +21,7 @@
         <menuitem id="hdi_shipping_services"
                 name="Dịch vụ vận chuyển"
                 parent="hdi_express_config"
-                action="hdi_sale.action_shipping_service"
+                action="hdi_sale.action_main_shipping_service"
                 sequence="10"/>
 
         <menuitem id="hdi_additional_shipping_services"
