--- a/hdi_sale/views/sale_order_views.xml
+++ b/hdi_sale/views/sale_order_views.xml
@@ -91,7 +91,7 @@
               <field name="base_shipping_cost" readonly="1"/>
             </group>
             <group>
-              <field name="shipping_service_id.estimated_time" readonly="1"/>
+              <field name="shipping_service_estimated_time" readonly="1"/>
             </group>
           </group>
 
