Implement shipping order functionality with model, views, and access rights

--- a/hdi_sale/views/shipping_order_views.xml
+++ b/hdi_sale/views/shipping_order_views.xml
@@ -2,13 +2,13 @@
 <odoo>
   <!-- Shipping Order Form View -->
   <record id="view_shipping_order_form" model="ir.ui.view">
-    <field name="name">sale.order.shipping.form</field>
-    <field name="model">sale.order</field>
+    <field name="name">shipping.order.form</field>
+    <field name="model">shipping.order</field>
     <field name="arch" type="xml">
       <form>
         <header>
           <button name="action_submit_shipping" string="Gửi Hàng" type="object"
-            class="oe_highlight" invisible="is_shipping_order"/>
+            class="oe_highlight" invisible="state != 'draft'"/>
           <button name="action_cancel" string="Hủy" type="object"
             invisible="state not in ['draft', 'sent']"/>
           <field name="state" widget="statusbar"/>
@@ -120,8 +120,8 @@
 
   <!-- List View for Shipping Orders -->
   <record id="view_shipping_order_list" model="ir.ui.view">
-    <field name="name">sale.order.shipping.list</field>
-    <field name="model">sale.order</field>
+    <field name="name">shipping.order.list</field>
+    <field name="model">shipping.order</field>
     <field name="arch" type="xml">
       <list string="Danh sách phiếu gửi hàng">
         <field name="name"/>
@@ -138,8 +138,8 @@
 
   <!-- Search View for Shipping Orders -->
   <record id="view_shipping_order_search" model="ir.ui.view">
-    <field name="name">sale.order.shipping.search</field>
-    <field name="model">sale.order</field>
+    <field name="name">shipping.order.search</field>
+    <field name="model">shipping.order</field>
     <field name="arch" type="xml">
       <search string="Tìm kiếm phiếu gửi hàng">
         <field name="name" string="Số phiếu"/>
@@ -171,13 +171,13 @@
   <!-- Action: Create Shipping Order -->
   <record id="action_hdi_sale_order" model="ir.actions.act_window">
     <field name="name">Phiếu gửi hàng</field>
-    <field name="res_model">sale.order</field>
+    <field name="res_model">shipping.order</field>
     <field name="view_mode">list,form</field>
     <field name="view_ids" eval="[(5, 0, 0),
                                     (0, 0, {'view_mode': 'list', 'view_id': ref('view_shipping_order_list')}),
                                     (0, 0, {'view_mode': 'form', 'view_id': ref('view_shipping_order_form')})]"/>
-    <field name="context">{'default_is_shipping_order': True}</field>
-    <field name="domain">[('is_shipping_order', '=', True)]</field>
+    <field name="context">{}</field>
+    <field name="domain">[]</field>
     <field name="help" type="html">
       <p class="o_view_nocontent_smiling_face">
         Tạo phiếu gửi hàng mới
