--- a/hdi_sale/views/dashboard_views.xml
+++ b/hdi_sale/views/dashboard_views.xml
@@ -6,6 +6,10 @@
     <field name="model">shipping.order.dashboard</field>
     <field name="arch" type="xml">
       <form string="Bảng Điều Khiển Phiếu Gửi Hàng">
+        <header>
+          <button name="action_refresh_dashboard" string="Làm mới" type="object"
+            class="btn-primary"/>
+        </header>
         <sheet>
           <div class="oe_title">
             <h1>
@@ -51,10 +55,17 @@
             </div>
           </div>
 
-          <group name="info_group" class="mt-4">
-            <field name="current_user_id" widget="many2one_avatar_user"/>
-          </group>
         </sheet>
+        <script>
+            // Auto-refresh dashboard every 30 seconds
+            setInterval(function() {
+                // Trigger refresh by clicking the refresh button
+                var refreshBtn = document.querySelector('button[name="action_refresh_dashboard"]');
+                if (refreshBtn) {
+                    refreshBtn.click();
+                }
+            }, 30000); // 30 seconds
+        </script>
       </form>
     </field>
   </record>
@@ -65,6 +76,6 @@
     <field name="res_model">shipping.order.dashboard</field>
     <field name="view_mode">form</field>
     <field name="view_id" ref="view_shipping_order_dashboard_form"/>
-    <field name="target">new</field>
+    <field name="target">current</field>
   </record>
 </odoo>
